fixed layout errors on mobile

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -21,9 +21,9 @@ a {
     margin-bottom: 8px;
   }
   .content {
-    margin-left: 25px;
-    margin-right: 25px;
-    margin-bottom: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 15px;
   }
   .code {
     font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
